とりあえずinputラジオボタンが追加されるようにはした

--- a/vreco-project/public/index.html
+++ b/vreco-project/public/index.html
@@ -45,15 +45,14 @@
                 </div>
             </div>
 
-            <form id="mainform" class="container">
-                <ol>
+            <form class="container">
+                <ol id="mainform">
                     <li>
                         <div class="form-group">
                             <label for="name">Vtuberの名前</label>
                             <input type="text" class="form-control" name="name" id="form_name" placeholder="（例）キズナアイ">
                         </div>
                     </li>
-
 
                     <!--ラジオボタンを使用して選択させる -->
                     <li>
@@ -162,14 +161,14 @@
         </main>
 
       <!--フッターは、クラスで指定してCSSへ投げています。-->
-      <footer class="blockquote-footer">
+      <!-- <footer class="blockquote-footer">
         <a href="http://twitter.com/share" class="twitter-share-button"
         data-url="https://vreco-542cc.firebaseapp.com/"
         data-lang="ja">Tweet</a>
-        <script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
+        <script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script> -->
         <!--下2行のLINE共有ボタンは、公開後にしか確認できない仕様です。-->
-        <div class="line-it-button" data-lang="ja" data-type="share-a" data-ver="3" data-url="http://vreco-542cc.firebaseapp.com" data-color="default" data-size="small" data-count="false" style="display: none;"></div>
-        <script src="https://d.line-scdn.net/r/web/social-plugin/js/thirdparty/loader.min.js" async="async" defer="defer"></script><br>
+        <!-- <div class="line-it-button" data-lang="ja" data-type="share-a" data-ver="3" data-url="http://vreco-542cc.firebaseapp.com" data-color="default" data-size="small" data-count="false" style="display: none;"></div>
+        <script src="https://d.line-scdn.net/r/web/social-plugin/js/thirdparty/loader.min.js" async="async" defer="defer"></script><br> -->
         © All rights reserved by VRECO運営
       </footer>
 
