☆formの内容を取り込んで配列に格納するメソッドがとりあえず完成☆
１htmlでハードコーディングしていた選択肢をコメントアウト。今後不要が確定すれば削除予定
２input要素を追記するメソッドに、url入力欄と場所を入れ替える処理を追加。URL入力欄が常に一番下にくるように

--- a/vreco-project/public/index.html
+++ b/vreco-project/public/index.html
@@ -55,7 +55,7 @@
                     </li>
 
                     <!--ラジオボタンを使用して選択させる -->
-                    <li>
+                    <!-- <li>
                         <p>Q3一般的な内面の魅力</p>
                         <input type="radio" id="passion" name="mental" value="APPLE" onchange="func1()" checked>
                         <label for="passion">情熱的</label>
@@ -147,9 +147,9 @@
                         <label for="sharp">プロレス</label><br>
                         <input type="radio" id="tsundere" name="relation" value="APPLE" onchange="func1()" checked>
                         <label for="tsundere">相棒</label>
-                    </li>
+                    </li> -->
 
-                    <li>
+                    <li id="url-adrress">
                         <div class="form-group">
                             <label>URL（任意）</label>
                             <input type="url" class="form-control" name="url" placeholder="（例）example.com">
