ツイートボタン追加 ボタンの表示がコメントアウトされていたので、公式のコードで再度追加し、表示させておきました。

--- a/vreco-project/public/index.html
+++ b/vreco-project/public/index.html
@@ -161,14 +161,11 @@
         </main>
 
       <!--フッターは、クラスで指定してCSSへ投げています。-->
-      <!-- <footer class="blockquote-footer">
-        <a href="http://twitter.com/share" class="twitter-share-button"
-        data-url="https://vreco-542cc.firebaseapp.com/"
-        data-lang="ja">Tweet</a>
-        <script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script> -->
+      <!-- <footer class="blockquote-footer"-->
         <!--下2行のLINE共有ボタンは、公開後にしか確認できない仕様です。-->
         <!-- <div class="line-it-button" data-lang="ja" data-type="share-a" data-ver="3" data-url="http://vreco-542cc.firebaseapp.com" data-color="default" data-size="small" data-count="false" style="display: none;"></div>
         <script src="https://d.line-scdn.net/r/web/social-plugin/js/thirdparty/loader.min.js" async="async" defer="defer"></script><br> -->
+        <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script><br>
         © All rights reserved by VRECO運営
       </footer>
 
